Update AdminPropertyTypeController, PropertyMapper, PropertyService, ReqCreatePropertyDTO, ResPropertyDTO